--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <figure>
+<body>
+  <header>
+    <h1> The Solar System </h1>
  <figcaption>
   <img src="logo.svg" alt="">
   <p>"The Solar System"</p>
@@ -21,6 +24,7 @@
         <li><a href="">Comets</a></li>
       </ol>
     </nav>
+  </header>
 
 <figure>
  <figcaption>
@@ -28,4 +32,5 @@
   <p>"The Solar System—our home in the stars"</p>
  </figcaption>
 </figure>
+
 <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
