--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
 		<title>The Solar System </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<figure>
 <body>
   <header>
     <h1> The Solar System </h1>
- <figcaption>
-  <img src="logo.svg" alt="">
-  <p>"The Solar System"</p>
- </figcaption>
-</figure>
     <nav>
       <ol>
         <li><a href="">Stars</a></li>
@@ -27,6 +21,13 @@
   </header>
 
 <figure>
+  <figcaption>
+   <img src="logo.svg" alt="">
+   <p>"The Solar System"</p>
+  </figcaption>
+ </figure>
+
+<figure>
  <figcaption>
   <img src="banner.svg" alt="">
   <p>"The Solar System—our home in the stars"</p>
@@ -34,3 +35,5 @@
 </figure>
 
 <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+</body>
+</html>
